--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,56 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 80vh;
+  animation: fadeBackground2 6s;
+  animation-fill-mode: forwards;
+  border-radius: 20px;
+}
 
-/* 
+ 
+  @keyframes fadeIn2 {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+  @keyframes fadeBackground2 {
+    from { background-color:black}
+    to { background-color:antiquewhite }
+  }
 
-*/
+  .delete-button{
+    color: red;
+
+  }
+  
+  h2{
+    font-family: Arial;
+    font-size: 40px;
+    animation: fadeIn 5s;
+  }
+
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  .list{
+    background-color:burlywood;
+    border-style: solid;
+    border-radius: 20px;
+    padding: 30px;
+  }
+
+  body {
+    animation: fadeBackground 6s;
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes fadeBackground {
+    from { background-color: blue }
+    to { background-color:aliceblue; }
+  }
+
+  
